--- a/frontFarm/src/app/pages/reporte-compras/reporte-compras.component.html
+++ b/frontFarm/src/app/pages/reporte-compras/reporte-compras.component.html
@@ -1,7 +1,7 @@
 <!-- src/app/pages/compras/compras.component.html -->
 <div class="filtros">
   <h2 class="titulo text-center">Reporte General de Compras</h2>
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-3">
       <label style="white-space: nowrap;">Proveedor</label>
       <div class="position-relative">
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-2">
       <label style="white-space: nowrap;">Fecha inicial</label>
       <div class="position-relative">
