--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -116,6 +116,9 @@
           <li [routerLink]="'reporte/ventas-producto'" routerLinkActive="active" class="submenu-item">
             <span>Un sólo producto<fa-icon [icon]="icons.faReceipt" class="menu-icon"></fa-icon></span>
           </li>
+          <li [routerLink]="'reportes/devoluciones'" routerLinkActive="active" class="submenu-item">
+            <span>Devoluciones<fa-icon [icon]="'undo'" class="menu-icon"></fa-icon></span>
+          </li>
           <li [routerLink]="'/reporte/pedidos'" routerLinkActive="active" class="submenu-item">
             <span>Pedidos<fa-icon [icon]="'shopping-cart'" class="menu-icon"></fa-icon></span>
           </li>
