Reporte resumen - compras

--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -136,7 +136,7 @@
           </li>
         </ul>
         <ul *ngIf="expandedSubMenu === 'compras'" class="submenu">
-          <li [routerLink]="'reporte/compras-resumen'" routerLinkActive="active" class="submenu-item">
+          <li [routerLink]="'reportes-compras'" routerLinkActive="active" class="submenu-item">
             <span>Compras resumen<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
           </li>
         </ul>
