--- a/frontFarm/src/app/reportes-compras/compras-page.component.html
+++ b/frontFarm/src/app/reportes-compras/compras-page.component.html
@@ -1,6 +1,6 @@
 <!-- src/app/reportes-compras/compras-page.component.html -->
 
-<h3 class="titulo" style="text-align: center;">Reporte de Compras</h3>
+<h3 class="titulo" style="text-align: center;">Reporte de Compras Resumen</h3>
 <!-- Filtros -->
 <form [formGroup]="filtroForm" (ngSubmit)="buscar()" class="filtros">
   <div class="row g-2 align-items-end mb-3">
