--- a/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.css
+++ b/frontFarm/src/app/pages/reporte-ventas-por-farmacia/reporte-ventas-por-farmacia.component.css
@@ -3,4 +3,8 @@
     padding-bottom: 1rem;
 }
 
+.form-label {
+    margin-bottom: 0 !important;
+}
+
 .sortable { cursor: pointer; user-select: none; }
