--- a/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.css
+++ b/frontFarm/src/app/pages/reporte-ventas-producto/reporte-ventas-producto.component.css
@@ -20,6 +20,10 @@
     border-bottom: 2px solid #0453b3;
 }
 
+.form-label {
+    margin-bottom: 0 !important;
+}
+
 .compact-btn {
     height: 40px;
     padding-top: 6px;
