--- a/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
+++ b/frontFarm/src/app/pages/reporte-ventas/reporte-ventas.component.html
@@ -33,35 +33,37 @@
                 <input type="number" class="form-control" formControlName="limit" min="1" max="200">
             </div>
 
-            <div class="col-md-2">
-                <label class="form-label">Fecha inicial</label>
-                <input type="date" class="form-control" formControlName="fechaInicial">
-            </div>
+            <div class="mt-3 row">
+                <div class="col-md-2">
+                    <label class="form-label">Fecha inicial</label>
+                    <input type="date" class="form-control" formControlName="fechaInicial">
+                </div>
 
-            <div class="col-md-2">
-                <label class="form-label">Fecha final</label>
-                <input type="date" class="form-control" formControlName="fechaFinal">
-            </div>
+                <div class="col-md-2">
+                    <label class="form-label">Fecha final</label>
+                    <input type="date" class="form-control" formControlName="fechaFinal">
+                </div>
 
-            <div class="col-md-2">
-                <label class="form-label">Total desde</label>
-                <input type="number" class="form-control" formControlName="totalDesde" min="0" step="0.01">
-            </div>
+                <div class="col-md-2">
+                    <label class="form-label">Total desde</label>
+                    <input type="number" class="form-control" formControlName="totalDesde" min="0" step="0.01">
+                </div>
 
-            <div class="col-md-2">
-                <label class="form-label">Total hasta</label>
-                <input type="number" class="form-control" formControlName="totalHasta" min="0" step="0.01">
-            </div>
+                <div class="col-md-2">
+                    <label class="form-label">Total hasta</label>
+                    <input type="number" class="form-control" formControlName="totalHasta" min="0" step="0.01">
+                </div>
 
-            <div class="col-2">
-                <button type="button" class="btn-rojo" (click)="limpiar()" [disabled]="cargando"
-                matTooltip="Limpiar filtros"><i class="fas fa-times"></i></button>
-            </div>
+                <div class="col-2" style="margin-top: 1.3rem;">
+                    <button type="button" class="btn-rojo" (click)="limpiar()" [disabled]="cargando"
+                        matTooltip="Limpiar filtros"><i class="fas fa-times"></i></button>
+                </div>
 
-            <div class="col-2 text-end">
-                <button type="button" class="btn-gris" (click)="buscar(true)" [disabled]="cargando">
-                    {{ cargando ? 'Buscando...' : 'Buscar' }}
-                </button>
+                <div class="col-2 text-end" style="margin-top: 1.3rem;">
+                    <button type="button" class="btn-gris" (click)="buscar(true)" [disabled]="cargando">
+                        {{ cargando ? 'Buscando...' : 'Buscar' }}
+                    </button>
+                </div>
             </div>
         </form>
     </div>
@@ -149,7 +151,8 @@
                                             <td class="text-end">${{ p?.monederoCliente | number:'1.2-2' }}</td>
                                             <td class="text-end">${{ p?.descuento | number:'1.2-2' }}</td>
                                             <td class="text-end">${{ p?.costo * p?.cantidad | number:'1.2-2' }}</td>
-                                            <td class="text-end">${{ (p?.totalRen - p?.costo * p?.cantidad) - v?.formaPago?.vale |
+                                            <td class="text-end">${{ (p?.totalRen - p?.costo * p?.cantidad) -
+                                                v?.formaPago?.vale |
                                                 number:'1.2-2' }}</td>
                                             <td class="text-end">{{ (p?.totalRen - p?.costo * p?.cantidad) / (p?.costo *
                                                 p?.cantidad) * 100 | number:'1.2-2' }}%</td>
@@ -194,7 +197,8 @@
                     <td class="text-end" style="font-weight:600;">${{sumaTotalDescuento | number:'1.2-2'}}</td>
                     <td class="text-end" style="font-weight:600;">${{sumaCosto | number:'1.2-2'}}</td>
                     <td class="text-end" style="font-weight:600;">${{sumaUtilidad | number:'1.2-2'}}</td>
-                    <td class="text-end" style="font-weight:600;">{{sumaUtilidad / sumaCosto * 100 | number:'1.2-2'}}%</td>
+                    <td class="text-end" style="font-weight:600;">{{sumaUtilidad / sumaCosto * 100 | number:'1.2-2'}}%
+                    </td>
                     <td class="text-end"><strong>${{ sumaTotalFiltro | number:'1.2-2' }}</strong></td>
                 </tr>
                 <!-- <tr>
