Fix Devoluciones: ahora se devuelve dinero y monedero según el pago, sin importar el motivo de la devolución

--- a/frontFarm/src/app/impresiones/devolucion-ticket/devolucion-ticket.component.html
+++ b/frontFarm/src/app/impresiones/devolucion-ticket/devolucion-ticket.component.html
@@ -77,7 +77,7 @@
   </ng-container>
 
   <!-- Efectivo si aplica -->
-  <div style="text-align: right;" *ngIf="venta.totalDevolverEfectivo > 0">
+  <div style="text-align: right; font-size: larger;" *ngIf="venta.totalDevolverEfectivo > 0">
     Devolución de efectivo:
     <strong>${{ venta.totalDevolverEfectivo | number:'1.2-2' }}</strong>
   </div>
